<resources>
    <string name="app_name">Kaam Ki Baat</string>
    <string name="drw_op">Drawer Open</string>
    <string name="drw_cl">Drawer Close</string>
    <string name="contentDescription">contentDescription</string>
    <string name="website">www.kaamkibaat.in</string>
    <string name="home">Home</string>
    <string name="politics">Politics</string>
    <string name="news">News</string>
    <string name="bio">Biography</string>
    <string name="exit">Exit</string>
    <string name="ConDes">Description</string>
    <string name="video">Videos</string>
    <string name="advertisement">Advertisement</string>
    <string name="headline">Headline</string>
    <string name="welcome">Welcome to Kaam Ki Baat </string>
    <string name="loading">Loading....</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_kaam_ki_baat">welcome_to_kaam_ki_baat</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
</resources>